randomizado y botones all, top, jg y mid

--- a/rl.css
+++ b/rl.css
@@ -66,4 +66,20 @@ button:hover, #submit:hover, button:active,#submit:active{
     cursor: url("./cursores/gam1340.cur"),auto;
     transition: 0.5s ease;
 }
+.Campeones{
+    margin-top: 50px;
+    margin-left: 50px; 
+    padding: 190px;
+    border: 10px solid #785A28;
+    background-color: #5B5A56;
+}
+.TextoRec{
+    font-family: "Titulos Lol";
+    color : #C89B3C;
+}
+.champimg{
+    display: none;
+    height: 500px;
+    width: 500px;
+}
 
